--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -268,5 +268,6 @@
   "whatIsNew": "Что нового",
   "aNewVersionIsAvailable": "Доступна новая версия",
   "currentVersion": "Текущая версия",
-  "newVersion": "Новая версия"
+  "newVersion": "Новая версия",
+  "clickAgainToCLoseApp": "Нажмите еще раз, чтобы закрыть приложение!"
 }
